--- a/styles/global.css
+++ b/styles/global.css
@@ -24,17 +24,43 @@
 	font-weight: 800;
 } */
 
-:root {
-  --color-primary: #1498d5;
+* {
+  margin: 0;
+  padding: 0;
+  border: 0;
+  outline: 0;
+  box-sizing: border-box;
+  list-style: none;
+  text-decoration: none;
 }
 
-*,
-html,
-body {
-  font-family: "Roboto" !important;
+:root {
+  --color-bg: #fdfdff;
+  --color-bg-variant: #fdfbfb;
+  --color-primary: #1498d5;
+  --color-primary-variant: rgba(20,152,213, 0.4);
+  --color-white: #fff;
+  --color-light: rgba(255,255,255,0.6);
+  --color-black: #001529;
+
+  --transition: all 400ms ease;
+  --transition-md: all 600ms;
+  --transition-lg: all 800ms;
+  --transition-xl: all 1000ms;
+
+  --container-width-lg: 75%;
+  --container-width-md: 86%;
+  --container-width-sm: 90%;
+}
+
+html {
+  scroll-behavior: smooth !important;
 }
 body {
-  overflow-x: hidden;
+  font-family: "Roboto", sans-serif !important;
+  background: var(--color-bg);
+  color: var(--color-black);
+  /* overflow-x: hidden; */
 }
 
 #news-slider .slick-list {
