--- a/styles/blogview.css
+++ b/styles/blogview.css
@@ -24,6 +24,7 @@
 .blog-container h2 {
   font-weight: 700;
   line-height: 1.75;
+  font-size: 1.5rem;
 }
 .blog-container h3,
 .blog-container h4,
@@ -31,14 +32,78 @@
 .blog-container h5 {
   font-weight: 600;
   line-height: 1.75;
+  font-size: 1.25rem;
 }
 
-.blog-container img,
-.blog-container figure {
-  margin-top: 30px;
-  margin-bottom: 30px;
+.blog-container img {
+  border-radius: 4px;
+  /* margin-top: 30px;
+  margin-bottom: 30px; */
+  /* margin: 30px auto; */
 
-  max-width: 100%;
+  /* max-width: 100%;
   height: auto;
-  vertical-align: middle;
+  vertical-align: middle; */
+}
+
+.blog-container figure {
+  position: relative;
+}
+
+.tag-list,
+.social-icons {
+  flex-wrap: wrap;
+  display: flex;
+}
+
+.tag-list .tag {
+  padding: 8px 15px;
+  text-transform: uppercase;
+  font-size: 12px;
+  color: #a0a0bf;
+  display: inline-flex;
+  margin-bottom: 15px;
+  background: rgba(241, 72, 54, 0.1);
+  transition: var(--transition);
+}
+
+.social-icons a {
+  color: #a0a0bf;
+  width: 36px;
+  height: 36px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  transition: var(--transition);
+}
+.social-icons a:hover {
+  color: var(--color-primary);
+}
+.tag-list .tag:hover {
+  background: var(--color-primary-variant);
+  color: var(--color-white);
+}
+
+.tag-list .tag,
+.social {
+  font-weight: 600;
+}
+
+/* ------- WIDGET BOX --------- */
+.media {
+  padding-bottom: 30px;
+  margin-bottom: 30px;
+  border-bottom: 1px solid #e1e8ec;
+}
+
+.media:last-child {
+  margin-bottom: 0;
+  padding-bottom: 0;
+  border-bottom: none;
+}
+
+.media .media-body h6 {
+  font-size: 14px;
+  line-height: 1.5;
+  font-weight: 500;
 }
