--- a/styles/blogview.css
+++ b/styles/blogview.css
@@ -1,5 +1,5 @@
 .blog-container {
-  color: var(--color-gray);
+  color: var(--color-black);
   line-height: 1.75;
 }
 
@@ -17,7 +17,7 @@
 .blog-container h5,
 .blog-container h6,
 .blog-container a:hover {
-  color: var(--text-heading);
+  color: var(--color-primary);
 }
 
 .blog-container h1,
@@ -108,15 +108,24 @@
   font-weight: 500;
 }
 
+.js-toc-container {
+  position: sticky;
+  top: 100px;
+}
+
 .js-toc li a {
   display: block;
   width: 100%;
-  font-weight: 700;
-  line-height: 1.75;
-  font-size: 1.2rem;
+  font-weight: 400;
+  line-height: 1.5;
+  font-size: 1rem;
   color: var(--text-heading);
   /* padding: 0px 10px; */
-  max-height: 100px;
+  /* max-height: 100px; */
+}
+
+.js-toc li a:hover {
+  color: var(--color-primary);
 }
 
 .toc-list {
@@ -125,9 +134,16 @@
 
 .toc-list ol {
   padding-left: 10px;
-  max-height: 60px;
+  /* max-height: 60px; */
 }
 
 .js-toc .is-active-link {
   color: var(--color-primary);
+}
+.js-toc li a.is-active-link {
+  font-weight: 500;
+}
+
+.toc-link::before {
+  display: none;
 }
